@@ -1,7 +1,7 @@
 /*
- * Universal Media Server, for streaming any medias to DLNA
+ * Universal Media Server, for streaming any media to DLNA
  * compatible renderers based on the http://www.ps3mediaserver.org.
- * Copyright (C) 2012  UMS developers.
+ * Copyright (C) 2012 UMS developers.
  *
  * This program is a free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -20,6 +20,7 @@
 
 package net.pms.util;
 
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import com.sun.jna.Platform;
 import java.io.BufferedReader;
 import java.io.File;
@@ -27,12 +28,15 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.management.ManagementFactory;
 import java.lang.reflect.Field;
-import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import net.pms.PMS;
-import net.pms.io.Gob;
+import net.pms.io.BasicSystemUtils;
+import net.pms.io.StreamGobbler;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -49,7 +53,7 @@ public class ProcessUtil {
 	private static final int ALRM_TIMEOUT = 2000;
 
 	// work around a Java bug
-	// see: http://kylecartmell.com/?p=9
+	// see: http://www.cnblogs.com/abnercai/archive/2012/12/27/2836008.html
 	public static int waitFor(Process p) {
 		int exit = -1;
 
@@ -113,11 +117,11 @@ public class ProcessUtil {
 		boolean killed = false;
 		LOGGER.warn("Sending kill -" + signal + " to the Unix process: " + pid);
 		try {
-			Process process = Runtime.getRuntime().exec("kill -" + signal + " " + pid);
-			// "Gob": a cryptic name for (e.g.) StreamGobbler - i.e. a stream
-			// consumer that reads and discards the stream
-			new Gob(process.getErrorStream()).start();
-			new Gob(process.getInputStream()).start();
+			ProcessBuilder processBuilder = new ProcessBuilder("kill", "-" + signal, Integer.toString(pid));
+			processBuilder.redirectErrorStream(true);
+			Process process = processBuilder.start();
+			// consume the error and output process streams
+			StreamGobbler.consume(process.getInputStream(), true);
 			int exit = waitFor(process);
 			if (exit == 0) {
 				killed = true;
@@ -149,7 +153,7 @@ public class ProcessUtil {
 							p.exitValue();
 						} catch (IllegalThreadStateException itse) { // still running: nuke it
 							// kill -14 (ALRM) works (for MEncoder) and is less dangerous than kill -9
-							// so try that first 
+							// so try that first
 							if (!kill(pid, 14)) {
 								try {
 									// This is a last resort, so let's not be too eager
@@ -171,12 +175,35 @@ public class ProcessUtil {
 		}
 	}
 
+	/**
+	 * Converts the path of the specified {@link File} to the equivalent MS-DOS
+	 * style 8.3 path using the Windows API function {@code GetShortPathNameW()}
+	 * if the path contains Unicode characters.
+	 *
+	 * @param file the {@link File} whose path to convert.
+	 * @return The resulting non-Unicode file path.
+	 */
+	public static String getShortFileNameIfWideChars(File file) {
+		if (file == null) {
+			return null;
+		}
+		return getShortFileNameIfWideChars(file.getPath());
+	}
+
+	/**
+	 * Converts the specified file path to the equivalent MS-DOS style 8.3 path
+	 * using the Windows API function {@code GetShortPathNameW()} if the path
+	 * contains Unicode characters.
+	 *
+	 * @param name the file path to convert.
+	 * @return The resulting non-Unicode file path.
+	 */
 	public static String getShortFileNameIfWideChars(String name) {
-		return PMS.get().getRegistry().getShortPathNameW(name);
+		return BasicSystemUtils.INSTANCE.getShortPathNameW(name);
 	}
 
 	// Run cmd and return combined stdout/stderr
-	public static String run(String... cmd) {
+	public static String run(int[] expectedExitCodes, String... cmd) {
 		try {
 			ProcessBuilder pb = new ProcessBuilder(cmd);
 			pb.redirectErrorStream(true);
@@ -190,7 +217,16 @@ public class ProcessUtil {
 				}
 			}
 			p.waitFor();
-			if (p.exitValue() != 0) {
+			boolean expected = false;
+			if (expectedExitCodes != null) {
+				for (int expectedCode : expectedExitCodes) {
+					if (expectedCode == p.exitValue()) {
+						expected = true;
+						break;
+					}
+				}
+			}
+			if (!expected) {
 				LOGGER.debug("Warning: command {} returned {}", Arrays.toString(cmd), p.exitValue());
 			}
 			return output.toString();
@@ -200,17 +236,43 @@ public class ProcessUtil {
 		return "";
 	}
 
+	public static String run(String... cmd) {
+		int[] zeroExpected = { 0 };
+		return run(zeroExpected, cmd);
+	}
+
 	// Whitewash any arguments not suitable to display in dbg messages
 	// and make one single printable string
 	public static String dbgWashCmds(String[] cmd) {
-		for(int i=0; i < cmd.length; i++) {
-			if(cmd[i].contains("headers")) {
-				cmd[i+1]= cmd[i+1].replaceAll("Authorization: [^\n]+\n", "Authorization: ****\n");
-				i++;
-				continue;
+		StringBuilder sb = new StringBuilder();
+		boolean prevHeader = false;
+		for (String argument : cmd) {
+			if (isNotBlank(argument)) {
+				if (sb.length() > 0) {
+					sb.append(" ");
+				}
+
+				// Hide sensitive information from the log
+				String modifiedArgument;
+				if (prevHeader) {
+					modifiedArgument = argument.replaceAll("Authorization: [^\n]+\n", "Authorization: ****\n");
+					prevHeader = false;
+				} else {
+					if (argument.contains("headers")) {
+						prevHeader = true;
+					}
+					modifiedArgument = argument;
+				}
+
+				// Wrap arguments with spaces in double quotes to make them runnable if copy-pasted
+				if (modifiedArgument.contains(" ")) {
+					sb.append("\"").append(modifiedArgument).append("\"");
+				} else {
+					sb.append(modifiedArgument);
+				}
 			}
 		}
-		return StringUtils.join(cmd, " ");
+		return sb.toString();
 	}
 
 	// Rebooting
@@ -227,7 +289,31 @@ public class ProcessUtil {
 
 	// Shutdown UMS and either reboot or run the given command (e.g. a script to restart UMS)
 	public static void reboot(ArrayList<String> cmd, Map<String,String> env, String startdir, String... UMSOptions) {
-		final ArrayList<String> reboot = getUMSCommand();
+		final ArrayList<String> reboot;
+		String macAppPath = null;
+		if (Platform.isMac()) {
+			String libraryPath = ManagementFactory.getRuntimeMXBean().getLibraryPath();
+			if (StringUtils.isNotBlank(libraryPath)) {
+				Pattern pattern = Pattern.compile("(.+?\\.app)/Contents/MacOS");
+				Matcher matcher = pattern.matcher(libraryPath);
+				if (matcher.find()) {
+					macAppPath = matcher.group(1);
+				}
+			}
+		}
+		if (StringUtils.isNotBlank(macAppPath)) {
+			reboot = new ArrayList<>();
+			reboot.add("open");
+			reboot.add("-n");
+			reboot.add("-a");
+			reboot.add(macAppPath);
+			if (UMSOptions.length > 0) {
+				reboot.add("--args");
+			}
+		} else {
+			reboot = getUMSCommand();
+		}
+
 		if (UMSOptions.length > 0) {
 			reboot.addAll(Arrays.asList(UMSOptions));
 		}
@@ -235,9 +321,9 @@ public class ProcessUtil {
 			// We're doing a straight reboot
 			cmd = reboot;
 		} else {
-			// We're running a script that will eventually restart UMS 
+			// We're running a script that will eventually restart UMS
 			if (env == null) {
-				env = new HashMap<String,String>();
+				env = new HashMap<>();
 			}
 			// Tell the script how to restart UMS
 			env.put("RESTART_CMD", StringUtils.join(reboot, " "));
@@ -247,14 +333,14 @@ public class ProcessUtil {
 			startdir = System.getProperty("user.dir");
 		}
 
-		System.out.println("starting: " + StringUtils.join(cmd, " "));
+		System.out.println("Starting: " + StringUtils.join(cmd, " "));
 
 		final ProcessBuilder pb = new ProcessBuilder(cmd);
 		if (env != null) {
 			pb.environment().putAll(env);
 		}
 		pb.directory(new File(startdir));
-		System.out.println("in directory: " + pb.directory());
+		System.out.println("In folder: " + pb.directory());
 		try {
 			pb.start();
 		} catch (Exception e) {
@@ -268,10 +354,24 @@ public class ProcessUtil {
 	// See http://stackoverflow.com/questions/4159802/how-can-i-restart-a-java-application
 	//     http://stackoverflow.com/questions/1518213/read-java-jvm-startup-parameters-eg-xmx
 	public static ArrayList<String> getUMSCommand() {
-		ArrayList<String> reboot = new ArrayList<String>();
-		reboot.add(StringUtil.quoteArg(
-			 System.getProperty("java.home") + File.separator + "bin" + File.separator +
-			 ((Platform.isWindows() && System.console() == null) ? "javaw" : "java")));
+		ArrayList<String> reboot = new ArrayList<>();
+		File jvmPath = new File(System.getProperty("java.home"));
+		String jvmExecutableName = Platform.isWindows() && System.console() == null ? "javaw" : "java";
+		File jvmExecutable = new File(jvmPath, jvmExecutableName);
+		if (!jvmExecutable.exists() || jvmExecutable.isDirectory()) {
+			jvmPath = new File(jvmPath, "bin");
+			jvmExecutable = new File(jvmPath, jvmExecutableName);
+		}
+		if (!jvmExecutable.exists() || jvmExecutable.isDirectory()) {
+			LOGGER.error(
+				"Can´t find Java executable \"{}\", falling back to pathless execution using \"{}\"",
+				jvmExecutable.getAbsolutePath(),
+				jvmExecutableName
+			);
+			reboot.add(jvmExecutableName);
+		} else {
+			reboot.add(StringUtil.quoteArg(jvmExecutable.getAbsolutePath()));
+		}
 		for (String jvmArg : ManagementFactory.getRuntimeMXBean().getInputArguments()) {
 			reboot.add(StringUtil.quoteArg(jvmArg));
 		}
